--- a/FTAPWeb/Views/Home/Default.cshtml
+++ b/FTAPWeb/Views/Home/Default.cshtml
@@ -8,7 +8,7 @@
 <div class="interest_outr">
     <div class="interest_heading">
         <p>Interests</p>
-        @Html.ActionLink("See all", "Interest", "Home")
+        @Html.ActionLink("See all", "Interests", "Home")
     </div>
     <ul id="flexiselDemo3">
 
