--- a/FTAPWeb/Views/Home/Companies.cshtml
+++ b/FTAPWeb/Views/Home/Companies.cshtml
@@ -12,14 +12,29 @@
     </div>
     <div class="interest_inner">
         <div class="interest_list">
-            @foreach (var company in ViewBag.Companies)
-            {
+            @{
+                if (ViewBag.Companies != null)
+                {
+                    foreach (var company in ViewBag.Companies)
+                    {
                 <div class="interest_list_inner">
                     <a href="javascript:void(0);">
-                        <img src="@Url.Content(company.CompanyPicture)" /></a>
-                    <h4>@company.CompanyName</h4>
-                    <p>20 Opportunities</p>
+                        @if (company.CompanyPicture != null)
+                        {
+                            <img src='@Url.Content(company.CompanyPicture == null ? "" : company.CompanyPicture)' />
+                        }
+                        else
+                        {
+                            <img src='~/images/no-logo.jpg' />   
+                        }
+                    </a>
+                    <a style="color:#666666" href="javascript:void(0)">
+                        <h4><b>@company.CompanyName</b></h4>
+                        <p>20 Opportunities</p>
+                    </a>
                 </div>
+                    }
+                }
             }
         </div>
     </div>
